Finalized UI, added scrollpane to canvas, added class package uniqueness checking

--- a/src/jdcapp/css/jcd_style.css
+++ b/src/jdcapp/css/jcd_style.css
@@ -88,6 +88,11 @@
     -fx-background-color: lightgrey;
 }
 
+.workspace_scroll_pane {
+    -fx-fit-to-height: true;
+    -fx-fit-to-width: true;
+}
+
 .label {
     -fx-font-family: 'sans-serif';
     -fx-font-weight: normal;
